<resources>

    <string name="app_name">CuidaLe</string>
    <string name="botonInicioSesion">Iniciar sesion</string>
    <string name="botonInicioSesion2">Ya tengo una cuenta</string>
    <string name="botonRegistro">Registrarme</string>
    <string name="botonRegistro2">Crear una cuenta</string>
    <string name="Usuario">Usuario o Correo Electronico</string>
    <string name="Password">Introduce tu contraseña</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="Apellido">Primer Apellido</string>
    <string name="Apellido2">Segundo Apellido</string>
    <string name="Direccion">Direccion</string>
    <string name="Guardar">Guardar</string>
    <string name="Farmacia">Farmacia</string>
    <string name="CE">Correo Electronico</string>
    <string name="NU">Nombre de Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="RContraseña">Repita Contraseña</string>
    <string name="DNI">DNI o Pasaporte</string>
    <string name="registrarme">Registrarme</string>
    <string name="errorVacioIS">Rellena Usuario y Contraseña</string>
    <string name="errorVacioR">Rellena todos los campos</string>
    <string name="errorContra">La contraseña no coincide!!</string>
    <string name="Recetas">Recetas</string>
    <string name="Farmacias">Farmacias</string>
    <string name="Pastillero">Pastillero</string>
    <string name="Recordatorios">Recordatorios</string>
    <string name="Historial">Historial</string>
    <string name="Calendario">Calendario</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="TemaOscuro">Tema oscuro</string>
    <string name="Ayuda">Ayuda</string>
    <string name="Ajustes">Ajustes</string>
    <string name="DatosPersonales">Datos personales</string>
    <string name="Seguridad">Seguridad</string>
    <string name="CerrarSesion">CERRAR SESION</string>
    <string name="title_Historial">Historial</string>
    <string name="MenuPrincipal">Menú Principal</string>


    <!-- STRINGS FRAGMENT USUARIO CUIDADOR -->
    <!-- Nombre de usuario -->
    <string name="user_name">Enrique Perez Arias</string>
    <string name="user_email">enriperez1988@gmail.com</string>
    <string name="user_id">7663943H</string>  <!-- DNI -->

    <!-- Botón de cambio -->
    <string name="btn_change">Cambiar</string>

    <!-- Contactos -->
    <string name="contact_1_name">Carlos Domingas</string>
    <string name="contact_1_location">Villacarrillo, Jaén</string>

    <string name="contact_2_name">Antonia Sanchez</string>
    <string name="contact_2_location">Vera, Almería</string>


    <!-- STRINGS FRAGMENT AJUSTES -->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- STRINGS FRAGMENT RECORDATORIOS -->
    <!-- TITULO -->
    <string name="titulo_recordatorios">RECORDATORIOS</string>

    <!-- RECORDATORIOS -->
    <string name="recordatorio1_hora">06:00</string>
    <string name="recordatorio1_med">Ibuprofeno</string>

    <!-- FARMACIAS -->
    <string name="title_farmacies">FARMACIAS</string>
    <string name="farmacias_cercanas">¡Encuentra tus farmacias cercanas!</string>

    <string name="open_google_maps">Abrir Google Maps</string>

    <!-- STRINGS FRAGMENT AYUDA -->
    <string name="InformarProblema">Informar de un problema</string>
    <string name="ServicioAyuda">Servicio de ayuda</string>

    <!-- STRINGS FRAGMENT SEGURIDAD -->

    <string name="CambiarContrasena">Cambiar contraseña</string>
    <string name="AuntenticacionDosPasos">Autenticación</string>
    <string name="AlertasLogin">Alertas inicio sesión</string>
    <string name="Dispositivos">Dispositivos</string>

    <string name="title_security">SEGURIDAD</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="two_step_auth">Autenticación en dos pasos</string>
    <string name="login_alerts">Alertas de inicio de sesión</string>
    <string name="saved_login">Inicio de sesión guardado</string>
    <string name="where_logged_in">Donde has iniciado sesión</string>

    <!-- STRINGS AGREGAR PACIENTE-->
    <string name="addPaciente">Añadir paciente</string>
    <string name="nombrePaciente">Nombre del paciente</string>
    <string name="localizcionPaciente">Localización</string>

</resources>