<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:textAlignment="center">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/title_security"
        android:textColor="@android:color/black"
        android:textSize="50dp"
        android:textStyle="bold" />

    <!-- First Option -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <!-- Second Option -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/two_step_auth"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <!-- Third Option -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/login_alerts"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <!-- Fourth Option -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/saved_login"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <!-- Fifth Option -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/where_logged_in"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/darker_gray" />

    <!-- Espacio para empujar el botón hacia abajo -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btn_retroceso"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_light_blue"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />
</LinearLayout>
